[package]
name = "messier"
version = "0.1.0"
authors = ["nullawhale <kura98.21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
glib = "0.10.1"
opener = "0.4.1"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
