[package]
name = "messier"
version = "0.1.0"
authors = ["nullawhale <kura98.21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10.1"
opener = "0.4.1"

[dependencies.chrono]
version = "0.4.10"
features = ["serde"]

[dependencies.gtk]
version = "0.9.0"
features = ["v3_22"]

[dependencies.gio]
version = "0.9.0"
features = ["v2_56"]
